--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -3,12 +3,29 @@
 // The variables you want to modify
 // $font-size-root: 20px;
 
+$code-background-color: #121417 !important;
 $body-font-family: 'Fira Sans', sans-serif;
+$code-color: white;
 
+code {
+  background-color: $code-background-color;
+}
 $material-dark: (
-  'background': #171a1e
+  'background': #171a1e,
+  'code-background-color': #121417
 );
 
 :not(pre) > code[class*="language-"] {
   display: inline-block !important;
+}
+
+blockquote {
+  background: #121417;
+  border-left: 6px solid #78b800;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+}
+
+blockquote p {
+  display: inline;
 }
