--- a/static/prism-vsc-dark-plus.css
+++ b/static/prism-vsc-dark-plus.css
@@ -29,6 +29,10 @@ pre[class*="language-"] {
   hyphens: none;
 }
 
+code[class*="language-"]::before {
+  letter-spacing: -8px;
+}
+
 /* Code blocks */
 pre[class*="language-"] {
   padding: 1em;
