--- a/static/prism-vsc-dark-plus.css
+++ b/static/prism-vsc-dark-plus.css
@@ -45,6 +45,7 @@ pre[class*="language-"] {
 pre[class*="language-"] {
   background: #121417;
   display: inline-list-item;
+  max-width: 100%;
 }
 
 @media only screen and (max-width: 959px) {
@@ -52,6 +53,7 @@ pre[class*="language-"] {
   pre[class*="language-"] {
     background: #121417;
     display: block;
+    max-width: 100%;
   }
 }
 
@@ -60,6 +62,7 @@ pre[class*="language-"] {
   padding: .1em;
   border-radius: .3em;
   white-space: normal;
+  max-width: 100%;
 }
 
 .token.comment,
